Dark mode added, works only half of the pages for some stupid freaking reason doesnt make sense yall betta fix this

--- a/src/App.css
+++ b/src/App.css
@@ -53,7 +53,6 @@
 }
 
 .home {
-  background-color: #ffffff;
   display: flex;
   flex-direction: column;
   align-items: center;
