--- a/src/CSSFiles/Contact.css
+++ b/src/CSSFiles/Contact.css
@@ -4,6 +4,7 @@
   justify-content: center;
   align-items: center;
   margin-top: 5vh;
+  width: 100%;
 }
 
 .contact-col1 {
@@ -50,7 +51,6 @@
   flex-direction: column;
   align-items: center;
   justify-content: space-evenly;
-  margin-top: 40vh;
   height: 25vh;
-  width: 200vh;
+  width: 100%;
 }
