--- a/src/CSSFiles/Profile.css
+++ b/src/CSSFiles/Profile.css
@@ -10,7 +10,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-top: 10vh;
+  margin-top: 12vh;
 }
 
 .profile-logged {
