--- a/src/CSSFiles/SinglePlayerGames.css
+++ b/src/CSSFiles/SinglePlayerGames.css
@@ -3,8 +3,6 @@
   flex-direction: column;
   align-items: center;
   justify-content: space-evenly;
-  margin-top: 40vh;
-  height: 25vh;
   width: 200vh;
 }
 
@@ -31,7 +29,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: space-evenly;
 }
 
 img {
